src/interpreter/interpreter.cc
@@ -181,6 +181,7 @@ InterpreterCompilationJob::Status InterpreterCompilationJob::ExecuteJobImpl() {
   RuntimeCallTimerScope runtimeTimer(info()->isolate(),
                                      &RuntimeCallStats::CompileIgnition);
   TimerEventScope<TimerEventCompileIgnition> timer(info()->isolate());
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("v8.compile"), "V8.CompileIgnition");
   TRACE_EVENT_RUNTIME_CALL_STATS_TRACING_SCOPED(
       info()->isolate(), &tracing::TraceEventStatsTable::CompileIgnition);
 
